feat: implement android and ios folders

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "open-in-external-app",
-    "displayName": "Open in External App",
-    "version": "0.10.0",
-    "description": "Open file with external application in VSCode",
-    "publisher": "YuTengjing",
+    "name": "open-with-custom-app",
+    "displayName": "Open with Custom App",
+    "version": "0.1.0",
+    "description": "Open file/folders with external application in VSCode",
+    "publisher": "KevinMagus",
     "author": {
-        "name": "YuTengjing",
-        "url": "https://github.com/tjx666",
-        "email": "ytj2713151713@gmail.com"
+        "name": "KevinMagus",
+        "url": "https://github.com/kevinarch",
+        "email": "contact@sontieu.dev"
     },
     "icon": "images/logo.png",
     "license": "SEE LICENSE IN LICENSE",
@@ -15,22 +15,22 @@
         {
             "url": "https://img.shields.io/badge/License-MIT-brightgreen.svg",
             "description": "License: MIT",
-            "href": "https://github.com/tjx666/open-in-external-app/blob/master/LICENSE"
+            "href": "https://github.com/kevinarch/open-with-external/blob/master/LICENSE"
         },
         {
             "url": "https://img.shields.io/badge/PRs-welcome-brightgreen.svg",
             "description": "PRs Welcome",
-            "href": "https://github.com/tjx666/open-in-external-app"
+            "href": "https://github.com/kevinarch/open-with-external"
         }
     ],
-    "homepage": "https://github.com/tjx666/open-in-external-app/blob/master/README.md",
+    "homepage": "https://github.com/kevinarch/open-with-external/blob/master/README.md",
     "bugs": {
-        "url": "https://github.com/tjx666/open-in-external-app/issues",
-        "email": "ytj2713151713@gmail.com"
+        "url": "https://github.com/kevinarch/open-with-external/issues",
+        "email": "contact@sontieu.dev"
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/tjx666/open-in-external-app"
+        "url": "https://github.com/kevinarch/open-with-external"
     },
     "engines": {
         "vscode": "^1.80.0"
@@ -95,6 +95,14 @@
             {
                 "command": "openInExternalApp.openMultiple",
                 "title": "%cmd.openMultiple%"
+            },
+            {
+                "command": "openInExternalApp.openAndroidStudio",
+                "title": "%cmd.openAndroidStudio%"
+            },
+            {
+                "command": "openInExternalApp.openXcode",
+                "title": "%cmd.openXcode%"
             }
         ],
         "menus": {
@@ -103,6 +111,16 @@
                     "when": "!explorerResourceIsFolder && isFileSystemResource",
                     "command": "openInExternalApp.open",
                     "alt": "openInExternalApp.openMultiple",
+                    "group": "navigation@10"
+                },
+                {
+                    "when": "explorerResourceIsFolder && resourceFilename =~ /android$/",
+                    "command": "openInExternalApp.openAndroidStudio",
+                    "group": "navigation@10"
+                },
+                {
+                    "when": "explorerResourceIsFolder && (resourceFilename =~ /.*\\.xcworkspace$/ || resourceFilename =~ /.*\\.xcodeproj$/)",
+                    "command": "openInExternalApp.openXcode",
                     "group": "navigation@10"
                 }
             ],
@@ -123,6 +141,11 @@
                 "openInExternalApp.enableLog": {
                     "type": "boolean",
                     "default": true
+                },
+                "openInExternalApp.androidStudioPath": {
+                    "type": "string",
+                    "description": "Specifies the path to Android Studio executable",
+                    "default": ""
                 },
                 "openInExternalApp.openMapper": {
                     "type": "array",
